# pq-eth-precompiles

./: .gitignore  Cargo.toml
benches/: ntt_bench.rs
docs/: benchmarks.md  design.md  precompiles.md
falcon_probe/: Cargo.toml  README.md  check_live_precompile.py
falcon_probe/src/: main.rs
go/: go.mod
go/ntt/: eth_ntt.h  ntt.go  ntt_test.go
include/: eth_ntt.h
kurtosis/: README.md
kurtosis/contracts/: FalconVerifierDirectVerify.yul  FalconVerifierNTT.yul  FalconVerifierNTTWithLpNorm.yul  FalconVerifierV5.yul  HawkVerifierNTTBound.yul
kurtosis/scripts/: falcon_fuzz.py
ml-dsa_wallet/: .gitignore  README.md  exec.sh
ml-dsa_wallet/rust/src/: lib.rs
ml-dsa_wallet/state/: deployment.json
src/: compact.rs  fast.rs  ffi.rs  fx32_fft.rs  lib.rs  precompile.rs
tests/: falcon512.rs  falcon512_real.rs
