[package]
name = "eth-ntt"
version = "0.1.0"
edition = "2021"
description = "EIP NTT precompile: Number Theoretic Transform operations for Ethereum"
license = "MIT"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"
sha3 = "0.10"

[[bench]]
name = "ntt_bench"
harness = false
